Commit dedicated to accelerate the startup sequence of GAMA (by ~2x)
- Simplifies the registration and organisation of types, with a much
simpler algorithm to build the hierarchy (Types.java).
- Allows the creation of operators' signatures directly from Java
classes
- Consolidates the various artefacts in GAML.java (instead of
AbstractGamlAdditions)
- Moves utility methods as default methods in IGamlAdditions
- Consolidates similar methods (like _operator()) in
AbstractGamlAdditions, and removes _unary() and _binary()
- Simplifies GamaGetter by removing its subinterfaces
- Introduces a NULL IValidator as the default
- Avoids initializing Types twice in GamaBundleLoader
- Removes description factories from the GAML additions (now hardcoded)
- Remove the generation of xmi files from headless options
- Drastically simplifies BuiltInGlobalScopeProvider and removes the
documentation from the xmi files
- Loads physics native libraries only on demand
- Modifies the annotation processor to comply with the new API of
AbstractGamlAdditions